Chore: CategoryCode -> CategoryName으로 받아서 처리하도록  수정